@@ -1,6 +1,7 @@
 package re.st.animalshelter.service;
 
 import com.pengrad.telegrambot.TelegramBot;
+import com.pengrad.telegrambot.model.File;
 import com.pengrad.telegrambot.model.Message;
 import com.pengrad.telegrambot.model.PhotoSize;
 import com.pengrad.telegrambot.request.GetFile;
@@ -13,10 +14,10 @@ import re.st.animalshelter.model.entity.User;
 import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.*;
+import java.nio.file.attribute.FileAttribute;
 import java.time.LocalDateTime;
+import java.time.Month;
 
 @Service
 public class FileService {
@@ -29,27 +30,35 @@ public class FileService {
         this.telegramBot = telegramBot;
     }
 
-    public void saveText(String text, long chatId) {
-        Path reportsPath = getReportsPath(chatId);
+    public void saveText(long chatId, String text) {
+        String reportsFullPath = getReportsPath(chatId);
+        String[] split = reportsFullPath.split("#");
+        String reportsDirectory = split[0];
+        String reportsFile = split[1] + ".txt";
+        Path reportsDirectoryPath = Path.of(reportsDirectory);
+        Path reportsFilePath = Path.of(reportsDirectory, reportsFile);
         byte[] bytes = text.getBytes();
         try {
-            Files.write(reportsPath, bytes);
+            Files.createDirectories(reportsDirectoryPath);
+            Files.write(reportsFilePath, bytes);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
-    public void savePhoto(PhotoSize[] photoSizes, long chatId) {
-        Path reportsPath = getReportsPath(chatId);
+    public void savePhoto(long chatId, PhotoSize[] photoSizes) {
+        String fullPath = getReportsPath(chatId).replace("#", "/");
         PhotoSize photo = photoSizes[photoSizes.length - 1];
         String fileId = photo.fileId();
         GetFile file = new GetFile(fileId);
         GetFileResponse response = telegramBot.execute(file);
+        File fileFromResponse = response.file();
         if (response.isOk()) {
             try {
-                byte[] fileContent = telegramBot.getFileContent(response.file());
-                String extension = StringUtils.getFilenameExtension(response.file().filePath());
-                Files.write(Paths.get(reportsPath + "." + extension), fileContent);
+                byte[] fileContent = telegramBot.getFileContent(fileFromResponse);
+                String extension = StringUtils.getFilenameExtension(fileFromResponse.filePath());
+                Path reportsFilePath = Path.of(fullPath + "." + extension);
+                Files.write(reportsFilePath, fileContent);
             } catch (IOException e) {
                 throw new RuntimeException(e);
             }
@@ -68,14 +77,16 @@ public class FileService {
 //                        }
 //                    }
 
-    private Path getReportsPath(long chatId) {
+    private String getReportsPath(long chatId) {
         User user = userService.getUser(chatId);
         long id = user.getId();
         int day = LocalDateTime.now().getDayOfMonth();
+        Month month = LocalDateTime.now().getMonth();
+        int year = LocalDateTime.now().getYear();
         int hour = LocalDateTime.now().getHour();
         int minute = LocalDateTime.now().getMinute();
         String fullName = user.getFullName().replace(" ", "_");
-        return Path.of("/reports", fullName + "_" + id + "/" + day + hour + minute);
+        return "reports/" + fullName + "_" + id + "#" + day + "." + month + "." + year + "_" + hour + "." + minute;
     }
 
 
